[package]
name = "web2images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
headless_chrome = "0.9.0"
qrcode = "0.12"
image = "0.23.0"
clap = { version = "3.1.17", features = ["derive"] }
url = "2.2"
failure = "0.1"
